--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,17 +13,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-
+      - name: Install dependencies
+        run: npm ci --only=production
+      - name: Build project
+        run: npm run build
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
+        with:
+          name: production-files
+          path: ./dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -31,6 +32,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Deploy artifact
         id: deployment
         uses: actions/deploy-pages@v3
+        with:
+          artifact-name: production-files
+          
