--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,11 +17,8 @@ jobs:
         run: npm ci --only=production
       - name: Build project
         run: npm run build
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v5
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: production-files
           path: ./dist
