--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: '18'
       - name: Install dependencies
-        run: npm ci --only=production
+        run: npm ci
       - name: Build project
         run: npm run build
       - name: Upload artifact
