--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -33,5 +33,6 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v3
         with:
-          artifact-name: production-files
+          artifact_name: production-files
+          
           
