--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -35,10 +35,9 @@ jobs:
       - name: Build project
         run: npm run build
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: production-files
-          path: ./dist
+          path: ./dist/
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -48,8 +47,6 @@ jobs:
     steps:
       - name: Deploy artifact
         id: deployment
-        uses: actions/deploy-pages@v3
-        with:
-          artifact_name: production-files
+        uses: actions/deploy-pages@v4
 
           
