--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build project
-        run: VITE_BASE_PATH="/worming-chat-helper/" && npm run build
+        run: VITE_BASE_PATH="/worming-chat-helper/" npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
