--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -33,7 +33,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build project
-        run: VITE_BASE_PATH="/${GITHUB_REPOSITORY#*/}/" npm run build
+        # run: VITE_BASE_PATH="/${GITHUB_REPOSITORY#*/}/" npm run build
+        # new domain
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
